# proc-siding

./: CUSTOMIZING.md  Cargo.toml  GETTING_STARTED.md  README.org  config.example.toml  flake.nix  tasks.org
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  logging.rs  main.rs
crates/cli/tests/: integration_test.rs
crates/lib/: Cargo.toml
crates/lib/src/: action.rs  config.rs  detector.rs  discovery.rs  lib.rs  metrics.rs  metrics_server.rs  monitor.rs
crates/lib/tests/: http_action_test.rs  metrics_test.rs  monitor_test.rs
examples/detectors/: README.org  amd-gpu.sh  metal-gpu.sh  nvidia-gpu.sh
nix/derivations/mlx-metal-test/: default.nix  mlx-metal-test
nix/modules/: darwin.nix  nixos.nix  web.nix
